# OraculoML

./: .gitignore  CLAUDE.md  README.md  app.py  mejoras-deepseek-v4.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
config/: settings.yaml
data/interim/: matches.parquet  teams_2026.parquet
data/live/: live_discipline.csv  live_injuries.csv  live_players.csv  live_results.csv
data/processed/: features.parquet  rosters_2026.parquet  squad_values.parquet
data/raw/: roster_extras.csv
docs/: ARCHITECTURE_SPEC.md  PLAN.md  RUNBOOK_ACTUALIZACION.md  project_graph.html
models/: artifacts.joblib
scripts/: 00_download_tier0.py  01_build_silver.py  02_build_features.py  03_train_baseline.py  04_train_final.py  05_consolidate_live.py  06_build_rosters.py  07_build_squad_values.py  08_build_graph.py
src/frontend/: __init__.py  inject.py
src/frontend/templates/: bracket.html  effects.html
src/mundial/: __init__.py  auth.py  config.py  display.py
src/mundial/features/: build.py  elo.py
src/mundial/ingest/: __init__.py  _download.py  international_results.py  openfootball.py  rosters.py
src/mundial/live/: __init__.py  engine.py  github_sync.py  online.py  state.py  store.py
src/mundial/models/: baseline.py  poisson.py
src/mundial/predict/: __init__.py  engine.py  (+2 more)
tests/: test_auth_rosters.py  test_finalists.py  test_github_sync.py  test_model_fixes.py  test_montecarlo_tiebreak.py  test_online_ko.py  test_state.py  test_store_consolidate.py  test_store_sanitize.py  test_third_allocation.py
(+3 files in other folders)
